# RabbitMQListener

./: Cargo.toml
src/: main.rs
