[package]
name = "rabbit_listener"
version = "0.1.0"
authors = ["Mark <mark.4ndrew.lewis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
tracing = { version = "0.1.26", features = ["log", "std", "attributes"] }
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.18"
tokio = { version = "1.6.0", features = ["full"] }
lapin = "1.7.1"
